# Simple-Super-Mario-Bro-OpenGL

./: .gitmodules  CMakeLists.txt  README.md  SuperMarioClone.sln
Dependencies/Box2D/lib/: box2d.lib
SuperMarioClone/: Brick.h  Camera.h  Coin.h  CoinBrick.cpp  ContactListener.cpp  ContactListener.h  Game.cpp  Game.h  IObject.h  Input.h  Level.cpp  Pipe.cpp  Renderer2D.h  Shader.h  SuperMarioClone.vcxproj  SuperMarioClone.vcxproj.filters  Texture.cpp  Texture.h  main.cpp
SuperMarioClone/Shader/: FlatColor.vert.glsl  Sprite.frag.glsl
assets/shaders/: FlatColor.frag  Sprite.vert
src/: Brick.cpp  Camera.cpp  Camera.h  Coin.cpp  CoinBrick.h  ContactListener.h  Game.cpp  Game.h  Ground.cpp  Ground.h  IObject.h  Input.cpp  Input.h  Level.h  Mario.cpp  Mario.h  Mushroom.cpp  Mushroom.h  Pipe.h  Renderer2D.cpp  Renderer2D.h  Shader.cpp  Shader.h  StairBrick.cpp  StairBrick.h  Texture.h  main.cpp
